# rap-spec

./: .gitignore  CNAME  LICENSE  README.md  pyproject.toml
examples/: README.md
examples/relaxometry-mri/: product-sub-01-t1-ses-01-gm.jsonld
schemas/v1/: aggregate.json  api-descriptor.json  collection.json  context.jsonld  participant.json  research-product.json
schemas/v1/data-types/: vector-data.json
schemas/v1/measurements/: base-measurement-context.jsonld  base-measurement.json  relaxometry-mri-context.jsonld  relaxometry-mri.json  timeseries-context.jsonld  timeseries.json
scripts/: generate_schemas.py  validate_examples.py
src/rap_spec/: __init__.py
src/rap_spec/data_types/: __init__.py  vector_data.py
src/rap_spec/measurements/: __init__.py  base.py  relaxometry_mri.py  timeseries.py
src/rap_spec/models/: __init__.py  aggregate.py  api_descriptor.py  collection.py  common.py  participant.py  research_product.py
