[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rap-spec"
version = "1.0.0"
description = "Research API Protocol (RAP) Specification - JSON Schema definitions for research data products"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Evidence Publishing"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic[email]>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
validation = [
    "jsonschema>=4.20",
]

[project.urls]
Homepage = "https://rap-spec.evidencepub.io"
Repository = "https://github.com/evidencepub/rap-spec"
Documentation = "https://rap-spec.evidencepub.io/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rap_spec = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
